@@ -26,7 +26,6 @@ import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -72,7 +71,7 @@ public class UdmUsageEditsInBaselineReportWidgetTest {
 
     @Test
     public void testGetReportFilter() {
-        Set<Integer> periods = Collections.singleton(202112);
+        Set<Integer> periods = Set.of(202112);
         Whitebox.setInternalState(widget, "periods", periods);
         LocalDateWidget dateFromWidget = createMock(LocalDateWidget.class);
         Whitebox.setInternalState(widget, "dateFromWidget", dateFromWidget);
