@@ -26,6 +26,7 @@ import org.powermock.modules.junit4.PowerMockRunner;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 /**
  * Verifies {@link PublicationFormatFilterWidget}.
@@ -64,7 +65,7 @@ public class PublicationFormatFilterWidgetTest {
     @Test
     public void testOnSave() {
         FilterSaveEvent filterSaveEvent = createMock(FilterSaveEvent.class);
-        expect(filterSaveEvent.getSelectedItemsIds()).andReturn(Collections.singleton(PUBLICATION_FORMAT)).once();
+        expect(filterSaveEvent.getSelectedItemsIds()).andReturn(Set.of(PUBLICATION_FORMAT)).once();
         replay(filterSaveEvent);
         publicationFormatFilterWidget.onSave(filterSaveEvent);
         verify(filterSaveEvent);
