@@ -48,6 +48,7 @@ import java.io.ByteArrayOutputStream;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 /**
  * Verifies {@link UsageDataUploadWindow}.
@@ -169,8 +170,7 @@ public class UsageDataUploadWindowTest {
         window = createWindowMock(batch);
         expect(window.isValid()).andReturn(true).once();
         expect(controller.usageDataExists(BATCH_ID)).andReturn(false).once();
-        expect(controller.getIneligibleBatchesNames(Collections.singleton(BATCH_ID)))
-            .andReturn(List.of(BATCH_NAME)).once();
+        expect(controller.getIneligibleBatchesNames(Set.of(BATCH_ID))).andReturn(List.of(BATCH_NAME)).once();
         Windows.showNotificationWindow("Selected Item Bank has usages that are not in ELIGIBLE status");
         expectLastCall().once();
         replay(window, controller, Windows.class);
@@ -189,8 +189,7 @@ public class UsageDataUploadWindowTest {
         window = createWindowMock(batch, uploadField);
         expect(window.isValid()).andReturn(true).once();
         expect(controller.usageDataExists(BATCH_ID)).andReturn(false).once();
-        expect(controller.getIneligibleBatchesNames(Collections.singleton(BATCH_ID)))
-            .andReturn(Collections.emptyList()).once();
+        expect(controller.getIneligibleBatchesNames(Set.of(BATCH_ID))).andReturn(Collections.emptyList()).once();
         expect(controller.getSalUsageDataCsvProcessor(BATCH_ID)).andReturn(processor).once();
         expect(processor.process(anyObject())).andReturn(processingResult).once();
         controller.loadUsageData(batch, processingResult.get());
